iphone8 the minds behind title fixed

--- a/style.css
+++ b/style.css
@@ -364,6 +364,12 @@ footer p {
         line-height: 25px;
         width: 300px;
     }
+
+    h2 {
+        text-align: center;
+        font-size: 30px;
+        padding: 50px 0 0 0;
+    }
     
     .description {
         padding: 0;
